[package]
name = "paya-chan"
version = "0.1.0"
edition = "2021"
authors = ["Mahir Ajmal <mahirajmal@live.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = "0.10"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
